Project tripcompass_logical {
  database_type: 'PostgreSQL'
  Note: 'Presentation ERD. Includes a logical destinations hub and hides technical outbox to make the domain model easier to read.'
}

Enum provider {
  local
  google
  facebook
}

Enum status {
  DRAFT
  PUBLISHED
}

Enum budget_category {
  BUDGET
  MODERATE
  LUXURY
}

Enum activity_category {
  FOOD
  LODGING
  TRANSPORT
  ATTRACTION
}

Enum place_category {
  ATTRACTION
  FOOD
  STAY
}

Enum collaborator_role {
  EDITOR
  VIEWER
}

Enum collaborator_status {
  PENDING
  ACCEPTED
}

Enum ai_chat_message_role {
  USER
  ASSISTANT
}

Table destinations [note: 'Logical entity for diagram readability. This is not a physical table in the current database.'] {
  name varchar(255) [pk]
}

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  email varchar(255) [not null, unique]
  password_hash varchar(255)
  full_name varchar(255) [not null]
  avatar_url varchar(255)
  provider provider [not null, default: 'local']
  is_verified boolean [not null, default: false]
  verify_token varchar(64)
  verify_token_expires_at timestamptz
  reset_token varchar(128)
  reset_token_expires_at timestamptz
  role varchar(20) [not null, default: 'user', note: 'Allowed values: user, editor, admin. Stored as VARCHAR in the physical DB.']
  status varchar(20) [not null, default: 'active', note: 'Allowed values: active, suspended.']
  created_at timestamp [not null, default: `now()`]
}

Table itineraries {
  id uuid [pk, default: `gen_random_uuid()`]
  owner_id uuid [not null]
  title varchar(255) [not null]
  destination varchar(255) [not null]
  budget numeric [not null]
  start_date date [not null]
  end_date date [not null]
  status status [not null, default: 'DRAFT']
  cover_image_url text
  rating real [not null, default: 0]
  view_count integer [not null, default: 0]
  clone_count integer [not null, default: 0]
  cloned_from_id uuid
  guest_count integer [not null, default: 1]
  tags text[] [default: '{}']
  budget_category budget_category [not null, default: 'MODERATE']
  created_at timestamp [not null, default: `now()`]
}

Table activities {
  id uuid [pk, default: `gen_random_uuid()`]
  itinerary_id uuid [not null]
  place_id uuid
  day_number integer [not null]
  order_index integer [not null]
  title varchar(255) [not null]
  category activity_category [not null]
  lat double
  lng double
  estimated_cost numeric [not null, default: 0]
  start_time time
  end_time time
  image_url varchar(255)
  notes text
  created_at timestamp [not null, default: `now()`]
}

Table places {
  id uuid [pk, default: `gen_random_uuid()`]
  destination varchar(255) [not null]
  category place_category [not null]
  name varchar(255) [not null]
  name_en varchar(255)
  description text
  address text
  area varchar(255)
  latitude double
  longitude double
  cover_image text
  images text[] [default: '{}']
  rating double
  review_count integer [not null, default: 0]
  must_visit boolean [not null, default: false]
  priority_score integer [not null, default: 0]
  best_time_of_day varchar(255)
  tags text[] [default: '{}']
  open_time time
  close_time time
  hours text
  recommended_duration integer
  base_price integer
  phone varchar(50)
  website text
  external_id varchar(100)
  external_source varchar(50)
  parent_id uuid
  sub_attractions text[] [not null, default: '{}']
  metadata jsonb [not null, default: `{}`]
  source_url text
  price_updated_at timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table combos {
  id uuid [pk, default: `gen_random_uuid()`]
  destination varchar(255) [not null]
  name varchar(255) [not null]
  cover_image text
  provider varchar(255)
  price_per_person integer
  includes text[] [default: '{}']
  benefits text[] [default: '{}']
  duration_days integer
  requires_overnight boolean [not null, default: false]
  book_url text
  price_updated_at timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table collaborators [note: 'Pending invite can use email while user_id is null.'] {
  id uuid [pk, default: `gen_random_uuid()`]
  itinerary_id uuid [not null]
  user_id uuid
  email text
  invited_by uuid [not null]
  role collaborator_role [not null, default: 'VIEWER']
  status collaborator_status [not null, default: 'PENDING']
  joined_at timestamp
}

Table ai_chat_sessions {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  title text [not null]
  destination text
  message_count integer [not null, default: 0]
  saved_itinerary_id uuid
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table ai_chat_messages {
  id uuid [pk, default: `gen_random_uuid()`]
  session_id uuid
  itinerary_id uuid
  role ai_chat_message_role [not null]
  content text [not null]
  metadata jsonb
  created_at timestamp [not null, default: `now()`]
}

Table user_saved_places {
  user_id uuid [not null]
  place_id uuid [not null]
  saved_at timestamp [not null, default: `now()`]

  Indexes {
    (user_id, place_id) [pk]
  }
}

Table destination_neighbors {
  id uuid [pk, default: `gen_random_uuid()`]
  destination varchar(255) [not null]
  neighbor varchar(255) [not null]
  travel_min_ow integer [not null]
  trip_type varchar(20) [not null, default: 'day_trip']
  min_trip_days integer [not null, default: 4]
  notes text
}

Table place_seasons {
  id uuid [pk, default: `gen_random_uuid()`]
  place_id uuid [not null]
  open_months integer[] [not null]
  notes text
}

Ref: itineraries.owner_id > users.id [delete: cascade]
Ref: itineraries.cloned_from_id > itineraries.id [delete: set null]
Ref: itineraries.destination > destinations.name

Ref: activities.itinerary_id > itineraries.id [delete: cascade]
Ref: activities.place_id > places.id [delete: set null]

Ref: places.destination > destinations.name
Ref: places.parent_id > places.id [delete: set null]
Ref: combos.destination > destinations.name
Ref: destination_neighbors.destination > destinations.name
Ref: destination_neighbors.neighbor > destinations.name

Ref: collaborators.itinerary_id > itineraries.id [delete: cascade]
Ref: collaborators.user_id > users.id [delete: cascade]
Ref: collaborators.invited_by > users.id

Ref: ai_chat_sessions.user_id > users.id [delete: cascade]
Ref: ai_chat_sessions.saved_itinerary_id > itineraries.id [delete: set null]

Ref: ai_chat_messages.session_id > ai_chat_sessions.id [delete: cascade]
Ref: ai_chat_messages.itinerary_id > itineraries.id [delete: cascade]

Ref: user_saved_places.user_id > users.id [delete: cascade]
Ref: user_saved_places.place_id > places.id [delete: cascade]

Ref: place_seasons.place_id > places.id [delete: cascade]
